# harvest_kit_hiwi

./: .gitignore  HISTORY.rst  README.rst  pyproject.toml
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
harvest_kit_hiwi/: __init__.py  cli.py  config.py  config.yml  document.py  harvest.py  processing.py  util.py
tests/: __init__.py  test_config.py  test_harvest.py  test_processing.py  test_templating.py  test_util.py  util.py
tests/assets/: sample.config.yml  time_entries.json
